--- a/pagina_pessoal/style.css
+++ b/pagina_pessoal/style.css
@@ -54,16 +54,18 @@ a:hover { /* Muda a cor do link quando passar o mouse por cima */
     font-size: 16px; /* Tamanho da fonte */
     text-align: center; /* Centraliza o texto */
     border-radius: 10px; /* A redonda as bordas */
-    padding: 5px 10px; /* Tamanho do botão */
+    padding: 10px 24px; /* Tamanho do botão */
     margin: 20px auto; /* Margem do botão */
     cursor: pointer;
+    display: block;
 }
 #meubotao:hover {
     background-color: green; /* Muda a cor do botão quando passar o mouse por cima */
 }
 #mensagem {
+    color: rgb(2, 71, 33);
     padding: auto; 
-    background-color: #f0f8ff;
     border-radius: 10px;
-    margin-top: 10px;
+    margin: 20px 0;
+    text-align: center;
 }
